@@ -1,5 +1,10 @@
+[B]Version 0.1.4[/B]
+-  Fixed issues with menu 
+
 [B]Version 0.1.3[/B]
--  Fixed video sources issue [B]Version 0.1.2[/B]
+-  Fixed video sources issue 
+
+[B]Version 0.1.2[/B]
 - Faster menu loading
 - Fixed solar movie get video link
 
